--- a/www/resume.html
+++ b/www/resume.html
@@ -3,14 +3,14 @@
 
 <head>
     <meta charset="utf-8" />
-    <title>Iury Gomes de Oliveira</title>
+    <title>Maria Júlia Silva Zanutto</title>
 
     <!-- Meta Data -->
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-    <meta name="author" content="Iury Gomes de Oliveira" />
-    <meta name="description" content="Portifólio de trabalhos realizados e formação de Iury Gomes de Oliveira" />
+    <meta name="author" content="Maria Júlia Silva Zanutto" />
+    <meta name="description" content="Portifólio de trabalhos realizados e formação de Maria Júlia Silva Zanutto" />
     <!-- Styles -->
     <link rel="stylesheet" type="text/css" href="assets/styles/style.css" />
     <link rel="stylesheet" type="text/css" href="assets/styles/style-dark.css" />
@@ -37,26 +37,26 @@
                         <img class="header__photo-img" src="assets/img/profile.jpeg" alt="Iury Gomes de Oliveira">
                     </div>
                     <div class="header__base-info">
-                        <h4 class="title titl--h4">Iury Gomes de Oliveira</h4>
-                        <div class="status">Desenvolvedor WEB</div>
+                        <h4 class="title titl--h4">Maria Júlia Silva Zanutto</h4>
+                        <div class="status">Estudante de Desenvolvimento WEB</div>
                         <ul class="header__social">
                             <li>
-                                <a href="https://www.linkedin.com/in/iurygdeoliveira/">
+                                <a href="/">
                                     <i class="font-icon icon-linkedin"></i>
                                 </a>
                             </li>
                             <li>
-                                <a href="https://github.com/iurygdeoliveira">
+                                <a href="https://github.com/MajuZanutto">
                                     <i class="font-icon icon-github"></i>
                                 </a>
                             </li>
                             <li>
-                                <a href="https://www.youtube.com/channel/UCTM1Idirf0ALOdEdq31qkjg?view_as=subscriber">
+                                <a href="r">
                                     <i class="font-icon icon-youtube"></i>
                                 </a>
                             </li>
                             <li>
-                                <a href="https://twitter.com/IuryProf">
+                                <a href="">
                                     <i class="font-icon icon-twitter"></i>
                                 </a>
                             </li>
@@ -83,7 +83,7 @@
                             <span class="overhead">
                                 Endereço
                             </span>
-                            Endereço Comercial - UF
+                            Pompéia - SP
                         </li>
                     </ul>
                 </div>
@@ -116,36 +116,11 @@
                                 <h2 class="title title--h3"><img class="title-icon"
                                         src="assets/icons/dark/icon-education.svg" alt="" /> Educação</h2>
                                 <div class="timeline">
-                                    <!-- Item -->
-                                    <article class="timeline__item">
-                                        <h5 class="title title--h5 timeline__title">MBA em Gestão de Tecnologia da
-                                            Informação</h5>
-                                        <span class="timeline__period">2013 — 2014</span>
-                                        <p class="timeline__description">
-                                            Centro Universitário Newton Paiva</p>
-                                    </article>
 
                                     <!-- Item -->
                                     <article class="timeline__item">
-                                        <h5 class="title title--h5 timeline__title">Bacharelado em Ciência da Computação
-                                        </h5>
-                                        <span class="timeline__period">2005 — 2009</span>
-                                        <p class="timeline__description">Universidade Católica de Goiás</p>
-                                    </article>
-
-                                    <!-- Item -->
-                                    <article class="timeline__item">
-                                        <h5 class="title title--h5 timeline__title">
-                                            Bootcamp Full Stack Developer
-                                        </h5>
-                                        <span class="timeline__period">2020 — 2020</span>
-                                        <p class="timeline__description">IGTI - Instituto de Gestão e Tecnologia da
-                                            Informação.</p>
-                                    </article>
-                                    <!-- Item -->
-                                    <article class="timeline__item">
-                                        <h5 class="title title--h5 timeline__title">Cursos Extracurriculares</h5>
-                                        <span class="timeline__period">ano — ano</span>
+                                        <h5 class="title title--h5 timeline__title">Ensino Médio</h5>
+                                        <span class="timeline__period">2018 — 2020</span>
                                         <p class="timeline__description">Empresa</p>
                                         <ul>
                                             <li>Curso 1</li>
@@ -300,7 +275,7 @@
                     </div>
 
                     <!-- Footer -->
-                    <footer class="footer">© Iury Gomes de Oliveira</footer>
+                    <footer class="footer">© Maria Júlia Silva Zanutto</footer>
                 </div>
             </div>
         </div>
