--- a/www/index.html
+++ b/www/index.html
@@ -3,14 +3,14 @@
 
 <head>
     <meta charset="utf-8" />
-    <title>Iury Gomes de Oliveira</title>
+    <title>Maria Júlia Silva Zanutto</title>
 
     <!-- Meta Data -->
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-    <meta name="author" content="Iury Gomes de Oliveira" />
-    <meta name="description" content="Portifólio de trabalhos realizados e formação de Iury Gomes de Oliveira" />
+    <meta name="author" content="Maria Júlia Silva Zanutto" />
+    <meta name="description" content="Portifólio de trabalhos realizados e formação de Maria Júlia Silva Zanutto" />
     <!-- Styles -->
     <link rel="stylesheet" type="text/css" href="assets/styles/style.css" />
     <link rel="stylesheet" type="text/css" href="assets/styles/style-dark.css" />
@@ -36,29 +36,29 @@
             <header class="header box">
                 <div class="header__left">
                     <div class="header__photo">
-                        <img class="header__photo-img" src="assets/img/profile.jpeg" alt="Iury Gomes de Oliveira">
+                        <img class="header__photo-img" src="assets/img/profile.jpeg" alt="Maria Júlia Silva Zanutto">
                     </div>
                     <div class="header__base-info">
-                        <h4 class="title titl--h4">Iury Gomes de Oliveira</h4>
-                        <div class="status">Desenvolvedor WEB</div>
+                        <h4 class="title titl--h4">Maria Júlia Silva Zanutto</h4>
+                        <div class="status">Estudante de Desenvolvimento WEB</div>
                         <ul class="header__social">
                             <li>
-                                <a href="https://www.linkedin.com/in/iurygdeoliveira/">
+                                <a href="">
                                     <i class="font-icon icon-linkedin"></i>
                                 </a>
                             </li>
                             <li>
-                                <a href="https://github.com/iurygdeoliveira">
+                                <a href="https://github.com/MajuZanutto">
                                     <i class="font-icon icon-github"></i>
                                 </a>
                             </li>
                             <li>
-                                <a href="https://www.youtube.com/channel/UCTM1Idirf0ALOdEdq31qkjg?view_as=subscriber">
+                                <a href="">
                                     <i class="font-icon icon-youtube"></i>
                                 </a>
                             </li>
                             <li>
-                                <a href="https://twitter.com/IuryProf">
+                                <a href="">
                                     <i class="font-icon icon-twitter"></i>
                                 </a>
                             </li>
@@ -85,7 +85,7 @@
                             <span class="overhead">
                                 Endereço
                             </span>
-                            Endereço Comercial - UF
+                            Pompéia - SP
                         </li>
                     </ul>
                 </div>
@@ -124,11 +124,7 @@
                         <!-- Sobre Mim  -->
                         <div class="pb-0 pb-sm-2">
                             <h1 class="title title--h1 first-title title__separate">Sobre Mim</h1>
-                            <p>Como muitos, comecei na programação por curiosidade! Com o tempo, o amor pela programação
-                                foi
-                                crescendo a ponto de se tornar uma profissão e me especializar na área. Hoje, com a
-                                bagagem que
-                                tenho, compartilho meu conhecimento com todos os alunos do Campus Araguaina - IFTO</p>
+                            <p>Estou iniciando na programação atráves do curso de Formação Inicail e Continuada em Programador Web pela IFTO. Sempre me interessei pela área de exatas e meu gosto por programação iniciou-se quando estudei Logica de programação pela primeira vez.</p>
 
 
                             <div>
@@ -172,7 +168,7 @@
 
                             <!-- Footer -->
                             <footer class="footer">
-                                © Iury Gomes de Oliveira
+                                
                             </footer>
                         </div>
                     </div>
