--- a/resume.html
+++ b/resume.html
@@ -217,9 +217,9 @@
                                     <div class="progress">
                                         <div class="progress-bar" role="progressbar" aria-valuenow="50"
                                             aria-valuemin="0" aria-valuemax="100">
-                                            <div class="progress-text"><span>PHP</span><span>50%</span></div>
+                                            <div class="progress-text"><span><HTML></HTML></span><span>50%</span></div>
                                         </div>
-                                        <div class="progress-text"><span>PHP</span></div>
+                                        <div class="progress-text"><span><HTML></HTML></span></div>
                                     </div>
                                     <div class="progress">
                                         <div class="progress-bar" role="progressbar" aria-valuenow="60"
