--- a/works.html
+++ b/works.html
@@ -121,8 +121,8 @@
                                             href="#filter">All</a></li>
                                     <li class="filter__item" data-filter=".category-html "><a class="filter__link"
                                             href="#filter">HTML+CSS</a></li>
-                                    <li class="filter__item" data-filter=".category-php"><a class="filter__link"
-                                            href="#filter">PHP</a></li>
+                                    <li class="filter__item" data-filter=".category-html"><a class="filter__link"
+                                            href="#filter"><HTML></HTML></a></li>
                                     <li class="filter__item" data-filter=".category-js"><a class="filter__link"
                                             href="#filter">JavaScript</a></li>
                                     <li class="filter__item" data-filter=".category-wordpress"><a class="filter__link"
@@ -171,7 +171,7 @@
                                 </figure>
 
                                 <!-- Item 4 -->
-                                <figure class="gallery-grid__item category-html category-wordpress category-php">
+                                <figure class="gallery-grid__item category-html category-wordpress category-html">
                                     <div class="gallery-grid__image-wrap">
                                         <img class="gallery-grid__image cover lazyload" src="assets/img/ifto.svg"
                                             data-zoom alt="" />
